--- a/src/PortfolioPages/Resume/Resume.css
+++ b/src/PortfolioPages/Resume/Resume.css
@@ -179,3 +179,19 @@
               margin-top: 20px;
        }
 }
+@media screen and (max-width: 375px) {
+       .resume-heading{
+              margin-top: 20px;
+       }
+       .resume_details{
+              margin-left: 30px;
+       }
+}
+@media screen and (max-width: 360px) {
+       .resume-heading{
+              margin-top: 20px;
+       }
+       .resume_details{
+              margin-left: 30px;
+       }
+}
