--- a/src/PortfolioPages/Resume/Resume.css
+++ b/src/PortfolioPages/Resume/Resume.css
@@ -178,6 +178,9 @@
        .resume-heading{
               margin-top: 20px;
        }
+       .resume_details{
+              margin-left: 30px;
+       }
 }
 @media screen and (max-width: 375px) {
        .resume-heading{
