--- a/src/PortfolioPages/Achievement/Certificate.css
+++ b/src/PortfolioPages/Achievement/Certificate.css
@@ -7,6 +7,11 @@
           width: 410px;
           margin-bottom: 15px;
 }
+.certificate_container:hover{
+           transform: scale(1.3);
+           transition: 0.6s ease-in-out;
+           cursor: pointer;
+}
 @media screen and (max-width:1110px){
           .certificate_container{
                     display: flex;
