--- a/src/PortfolioPages/AboutMe/AboutMe.css
+++ b/src/PortfolioPages/AboutMe/AboutMe.css
@@ -1,19 +1,21 @@
-.about_container{
+.about_section{
           height: 100%;
           padding: 40px 0 50px 0;
-          display: flex;
+          /* display: flex;
           align-items: center;
-          justify-content: center;
+          justify-content: center; */
 }
-/* .about_parent{
-        box-shadow: 5px 5px 5px lightgrey, -5px -5px 5px lightgrey;
-        padding: 50px;
-} */
 .description_role{
         box-shadow: 3px 3px 5px lightgrey, -3px -3px 5px lightgrey;
         padding: 50px;
 }
+.description_role:hover, .img:hover{
+        transform: scale(1.1);
+        transition: all 1.5s ease-in-out;        
+}
 .img{
+        width: 472px;
+        cursor: pointer;
         box-shadow: 3px 3px 5px lightgrey, -3px -3px 5px lightgrey;   
 }
 .description_role h1{
@@ -21,6 +23,9 @@
         font-family: "Anton", sans-serif;
         font-family: "Bebas Neue", cursive;
         font-family: "Charm", cursive;    
+}
+.highlighted_text h4{
+        margin-top: 40px;
 }
 .heading_text{
           font-weight: 800;
@@ -30,10 +35,6 @@
           font-family: "Bebas Neue", cursive;
           font-family: "Charm", cursive;
 }
-
-.about_details{
-          box-shadow: 5px 5px 5px lightgrey, -5px -5px 5px lightgrey;
-}
 .hire_btn{
           width: 150px;
           height: 45px;
@@ -42,9 +43,6 @@
           background-color: #111 !important;
           color: #fff !important;
           border-radius: 30px !important;
-}
-.highlighted_text h4{
-        margin-top: 40px;
 }
 .resume_btn{
           width: 150px;
@@ -81,39 +79,37 @@
           border-radius: 10px;
           background-color: #f34511;
 }
-.img{
-        width: 450px;
-}
-.img_container:hover{
-        transform: scale(1.1);
-        transition: all 1.5s ease-in-out;
-        cursor: pointer;
-}
-.description_role:hover{
-        transform: scale(1.1);
-        transition: all 1.5s ease-in-out;        
-}
-.description_role{
-        padding-top: 10px;
+
+@media screen and (max-width: 1400px){
+        .description_role{
+                width: 100%;
+                margin-left: 20px;
+                padding: 40px;
+        }
 }
 @media screen and (max-width: 1110px) {
         .img{
                 width: 100%;
+                height: auto;
                 margin-right: 15px;
-        }  
+        } 
+        .description_role{
+                height: 100%;
+                padding: 10px;
+        } 
 }
-@media screen and (max-width: 910px){
-        
-} 
+
 @media screen and (max-width: 810px){
         .heading_text{
                 font-size: 4.5rem;
         }
         .description_role{
-                margin-top: 20px;
+                margin-top: 50px;
+                padding: 40px;
+                margin-left: -8px;
         }
         .description_role h1{
-                font-size: 4rem;
+                font-size: 3rem;
         }
         .text p, .highlighted_text li{
                 font-size: 1.5rem;
@@ -123,39 +119,51 @@
         }
 }
 @media screen and (max-width: 605px){
+        .description_role{
+                padding: 25px;
+                margin: 40px 0 0 -5px;
+        }
         .description_role h1{
-                font-size: 2.5rem;
+                font-size: 2.2rem;
         }
         .text p, .highlighted_text li{
                 font-size: 1rem;
         }
+        
         .highlighted_text h4{
-                font-size: 2rem;
+                font-size: 1.9rem;
         }
 }
 @media screen and (max-width: 375px){
         .img{
-                width: 415px;
+                width: 360px;
                 height: auto;
+                margin-left: -5px;
         }
         .description_role{
-                margin: 10px 3px !important;
-                
+               width: 365px;
+               padding: 6px; 
+               margin-top: 20px;
+               margin-left: -7px;
         }
         .description_role h1{
-                width: 375px;
+                font-size: 2.2rem;
         }
 }
 @media screen and (max-width: 360px){
         .img{
-                width: 410px;
+                width: 350px;
                 height: auto;
         }
         .description_role{
-                margin: 10px !important;
-                
+              margin: 20px 0 0 -5px; 
+              padding: 5px; 
+              width: 350px;
+        }
+        .highlighted_text h4{
+                font-size: 1.9rem !important;
         }
         .description_role h1{
-                width: 355px;
+               font-size: 2.1rem;
         }
 }
