--- a/src/PortfolioPages/Achievement/Certificate.css
+++ b/src/PortfolioPages/Achievement/Certificate.css
@@ -12,6 +12,11 @@
            transition: 0.6s ease-in-out;
            cursor: pointer;
 }
+@media screen and (max-width:1400px){
+          .certificate_container .image{
+                    width: 100%;
+          }
+}          
 @media screen and (max-width:1110px){
           .certificate_container{
                     display: flex;
