--- a/src/PortfolioPages/Contact/Contact.css
+++ b/src/PortfolioPages/Contact/Contact.css
@@ -27,52 +27,17 @@
   font-weight: bold !important;
   color: #fff !important;
 }
+.address_container {
+  padding: 15px 0 15px 20px;
+  box-shadow: 5px 5px 5px lightgrey, -5px -5px 5px lightgrey;
+}
+.form_details {
+  padding: 15px;
+  box-shadow: 5px 5px 5px lightgrey, -5px -5px 5px lightgrey
+}
+ @media screen and (max-width: 700px) { 
+  .form_details{
+    margin-top: 40px !important;
+  }
+}
 
-/* .btn-scroll {
-  width: 50px;
-  height: 50px;
-  float: right;
-  color: #f0f8ff !important;
-  font-weight: bold !important;
-  font-size: 24px;
-  background-color: tomato;
-  border-radius: 10px;
-  border: none;
-} */
-
-.icon i {
-  font-size: 1.8rem !important;
-}
-@media screen and (max-width: 1310px) {
-  .contact_parent_role {
-    display: flex !important;
-    justify-content: space-between !important;
-  }
-}
-@media screen and (max-width: 1110px) {
-  .location_area {
-    width: 90% !important;
-  }
-  .contact_area {
-    width: 100% !important;
-  }
-}
-@media screen and (max-width: 810px) {
-  .contact_parent_role {
-    display: flex;
-    flex-direction: column;
-  }
-  .location_area {
-    width: 100% !important;
-  }
-  .contact_area {
-    margin-top: 30px !important;
-    margin-left: 0px !important;
-    width: 100% !important;
-  }
-}
-@media screen and (max-width: 375px) {
-  .contact_area {
-    margin-top: 30px !important;
-  }
-}
