--- a/src/PortfolioPages/Testimonial/Testimonial.css
+++ b/src/PortfolioPages/Testimonial/Testimonial.css
@@ -81,6 +81,10 @@
    .swiper-container{
        width: 1300px;
    }
+   .form_container{
+    width: 450px;
+    position: relative;
+}
 }
 @media screen and (min-width: 920px){
       .swiper-container{
@@ -96,6 +100,7 @@
         margin-left: 0 !important;
         justify-content: center !important;
     }
+    
 }
 @media screen and (min-width: 375px){
     .swiper-container{
@@ -105,6 +110,7 @@
         display: flex;
         justify-content: center !important;
     }
+    
 }
 @media screen and (min-width: 360px){
     .swiper-container{
@@ -114,4 +120,5 @@
         display: flex;
         justify-content: center !important;
     }
+    
 }
